--- a/.github/workflows/continuous-integration.yaml
+++ b/.github/workflows/continuous-integration.yaml
@@ -15,6 +15,8 @@ jobs:
         registry-url: 'https://registry.npmjs.org'
     - run: npm ci
     - run: npm run-script build
-    - run: aws s3 sync dist s3://www.sunruse.co.uk/quiz --acl public-read
+    - run: aws s3 sync dist s3://www.sunruse.co.uk/quiz --acl public-read --exclude "index.html"
+      if: github.ref == 'refs/heads/master'
+    - run: aws s3 sync dist s3://www.sunruse.co.uk/quiz --acl public-read --exclude "*" --include "index.html"
       if: github.ref == 'refs/heads/master'
     # todo push to Lambda
