--- a/.github/workflows/continuous-integration.yaml
+++ b/.github/workflows/continuous-integration.yaml
@@ -14,6 +14,7 @@ jobs:
         node-version: '10.x'
         registry-url: 'https://registry.npmjs.org'
     - run: npm ci
+    - run: npm run-script buildSharedLint
     - run: npm run-script build
     - run: aws s3 sync dist s3://www.sunruse.co.uk/quiz --acl public-read --exclude "index.html"
       if: github.ref == 'refs/heads/master'
