--- a/package.json
+++ b/package.json
@@ -52,9 +52,12 @@
     "buildTargets": "npm-run-all buildClient buildHost",
     "buildClient": "webpack --config client/webpack.config.ts",
     "buildHost": "npm-run-all buildHostClean buildHostTypeScript buildHostTargets",
-    "buildHostClean": "del-cli \"host/**/*.js\" \"host/**/*.d.ts\" \"host/**/*.exe\" \"dist/uploader.zip\"",
+    "buildHostClean": "del-cli \"host/**/*.js\" \"host/**/*.d.ts\" \"host/**/*.exe\" \"dist/uploader.zip\" \"host/aws/server/event-handler/dist\"",
     "buildHostTypeScript": "tsc",
-    "buildHostTargets": "npm-run-all buildHostAwsUploader",
+    "buildHostTargets": "npm-run-all buildHostAwsServer buildHostAwsUploader",
+    "buildHostAwsServer": "npm-run-all buildHostAwsServerWebpack buildHostAwsServerZip",
+    "buildHostAwsServerWebpack": "webpack --config host/aws/server/event-handler/webpack.config.ts",
+    "buildHostAwsServerZip": "node host/aws/server/zip",
     "buildHostAwsUploader": "npm-run-all buildHostAwsUploaderNexe buildHostAwsUploaderNexeZip",
     "buildHostAwsUploaderNexe": "nexe --target windows-x86-12.0.0 --input host/aws/uploader/index.js --output host/aws/uploader/sunruse-quiz-uploader.exe",
     "buildHostAwsUploaderNexeZip": "node host/aws/uploader/zip"
