--- a/.github/workflows/continuous-integration.yaml
+++ b/.github/workflows/continuous-integration.yaml
@@ -20,4 +20,4 @@ jobs:
       if: github.ref == 'refs/heads/master'
     - run: aws s3 sync dist s3://www.sunruse.co.uk/quiz --acl public-read --exclude "*" --include "index.html"
       if: github.ref == 'refs/heads/master'
-    # todo push to Lambda
+    - run: aws lambda update-function-code --function-name sunruse-quiz --zip-file host/aws/server/event-handler/dist/index.zip
