--- a/.github/workflows/continuous-integration.yaml
+++ b/.github/workflows/continuous-integration.yaml
@@ -20,5 +20,5 @@ jobs:
       if: github.ref == 'refs/heads/master'
     - run: aws s3 sync dist s3://www.sunruse.co.uk/quiz --acl public-read --exclude "*" --include "index.html"
       if: github.ref == 'refs/heads/master'
-    - run: aws lambda update-function-code --function-name sunruse-quiz --zip-file fileb://host/aws/server/event-handler/dist/index.zip
+    - run: aws lambda update-function-code --function-name sunruse-quiz --zip-file fileb://host/aws/server/event-handler/dist/index.zip --publish
       if: github.ref == 'refs/heads/master'
