Prevent creation of declaration files for client.

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "charset": "utf8",
     "composite": false,
-    "declaration": true,
+    "declaration": false,
     "diagnostics": false,
     "emitBOM": false,
     "incremental": false,
