Add user IDs to player state.

--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "@endless-trash/api-gateway-lambda-websocket-host": "0.0.2",
     "@endless-trash/dom-prompt-client": "0.0.11",
     "@endless-trash/dynamodb-key-value-store": "0.0.2",
+    "@endless-trash/instanced-prompt-websocket-server": "0.0.1",
     "@endless-trash/json-websocket-channel": "0.0.3",
     "@endless-trash/s3-file-store": "0.0.1",
     "aws-sdk": "2.817.0",
